--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,21 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         XML-SAX-ExpatXS
-version:      1.31
-version_from: lib/XML/SAX/ExpatXS.pm
-installdirs:  site
+--- #YAML:1.0
+name:               XML-SAX-ExpatXS
+version:            1.32
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    XML::SAX:                      0.13
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    XML::SAX:  0.13
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
